[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/player/bg_light.png" type="Texture" id=1]
[ext_resource path="res://scripts/player/player.gd" type="Script" id=2]
[ext_resource path="res://sprites/player/0_spot.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/light_sprite_aim_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/speed_danger.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Interface_scenes/joystick.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/player/center_wave.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/angle_wave.png" type="Texture" id=8]
[ext_resource path="res://Scenes/ControlJoystick.gd" type="Script" id=9]
[ext_resource path="res://scripts/player/CameraPlayer.gd" type="Script" id=10]
[ext_resource path="res://Music/sfx/player/wind.ogg" type="AudioStream" id=11]
[ext_resource path="res://scripts/player/breaking_sound.gd" type="Script" id=12]
[ext_resource path="res://scripts/player/hiting_sound.gd" type="Script" id=13]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.4

[sub_resource type="Animation" id=2]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("light:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.196078 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("light:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 5.0

[sub_resource type="Curve" id=4]
max_value = 0.5
_data = [ Vector2( 0, 0.263636 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=5]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("shot_360:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shot_angle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 0.8, 0.8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("shot_360:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("shot_angle:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="player" type="Node"]

[node name="GlowingParticles" type="CPUParticles2D" parent="."]
show_behind_parent = true
amount = 20
speed_scale = 3.75
emission_shape = 1
emission_sphere_radius = 5.0
gravity = Vector2( 0, 0 )
radial_accel = 2.0
scale_amount_random = 0.5

[node name="PlayerRigidBody" type="RigidBody2D" parent="."]
collision_layer = 524355
collision_mask = 524344
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="light" type="Sprite" parent="PlayerRigidBody"]
modulate = Color( 1, 1, 1, 0.196078 )
scale = Vector2( 0.8, 0.8 )
z_index = -1
texture = ExtResource( 1 )

[node name="LightAnimation" type="AnimationPlayer" parent="PlayerRigidBody"]
autoplay = "light"
anims/light = SubResource( 2 )

[node name="spot" type="Sprite" parent="PlayerRigidBody"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerRigidBody"]
shape = SubResource( 3 )

[node name="TrailParticles" type="CPUParticles2D" parent="PlayerRigidBody"]
show_behind_parent = true
speed_scale = 0.5
fixed_fps = 24
local_coords = false
texture = ExtResource( 3 )
gravity = Vector2( 0, 0 )
scale_amount_curve = SubResource( 4 )

[node name="SpeedDanger" type="Sprite" parent="PlayerRigidBody"]
visible = false
modulate = Color( 1, 1, 1, 0.576471 )
show_behind_parent = true
scale = Vector2( 1e-05, 1e-05 )
z_index = 90
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerRigidBody/SpeedDanger"]
anims/speed_danger = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true
editor_draw_drag_margin = true
script = ExtResource( 10 )

[node name="CenterPos" type="Position2D" parent="."]

[node name="shot_360" type="Sprite" parent="CenterPos"]
visible = false
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
scale = Vector2( 0.8, 0.8 )
z_index = 90
texture = ExtResource( 7 )

[node name="shot_angle" type="Sprite" parent="CenterPos"]
visible = false
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.8, 0.8 )
z_index = 90
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="CenterPos/shot_angle"]
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 4 )

[node name="AimAnimation" type="AnimationPlayer" parent="CenterPos"]
autoplay = "Aiming"
anims/Aiming = SubResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -60.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="joystick" parent="CanvasLayer/Control" instance=ExtResource( 6 )]
position = Vector2( 45, 20 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 110

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
visible = false
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2"]
autoplay = "fade_out"
anims/fade_out = SubResource( 7 )

[node name="breaking_sound" type="AudioStreamPlayer" parent="."]
bus = "reverb"
script = ExtResource( 12 )

[node name="hiting_sound" type="AudioStreamPlayer" parent="."]
bus = "reverb"
script = ExtResource( 13 )

[node name="wind_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -80.0
autoplay = true
[connection signal="body_entered" from="PlayerRigidBody" to="PlayerRigidBody" method="_on_RigidBody2D_body_entered"]
[connection signal="body_exited" from="PlayerRigidBody" to="PlayerRigidBody" method="_on_PlayerRigidBody_body_exited"]
